--- a/rtsp/docker/Dockerfile
+++ b/rtsp/docker/Dockerfile
@@ -1,17 +1,13 @@
-# Use Alpine Linux with FFmpeg as the base image
-FROM alpine:3.18 AS builder
+# Use Alpine Linux as the base image
+FROM alpine:3.18
 
-# Install FFmpeg for test stream generation
-RUN apk add --no-cache ffmpeg
+# Install required packages
+RUN apk add --no-cache \
+    ffmpeg \
+    rtsp-simple-server
 
 # Create a test video
 RUN ffmpeg -f lavfi -i testsrc=size=640x480:rate=30 -t 10 -c:v libx264 -pix_fmt yuv420p /test_stream.mp4
-
-# Final stage - use the official RTSP server image
-FROM aler9/rtsp-simple-server:latest
-
-# Copy the test video from builder
-COPY --from=builder /test_stream.mp4 /test_stream.mp4
 
 # Copy configuration and scripts
 COPY rtsp-simple-server.yml /rtsp-simple-server.yml
@@ -22,6 +18,10 @@ RUN chmod +x /start.sh
 
 # Expose necessary ports
 EXPOSE 8554 1935 8888
+
+# Set the working directory
+WORKDIR /
+
 
 # Set the entrypoint
 ENTRYPOINT ["/start.sh"]
