--- a/rtsp/ansible/test.yml
+++ b/rtsp/ansible/test.yml
@@ -1,5 +1,13 @@
 - name: Test RTSP stream
   block:
+    - name: Install system dependencies
+      apt:
+        name:
+          - python3-opencv
+          - python3-numpy
+        state: present
+        update_cache: yes
+
     - name: Install required Python packages
       pip:
         name:
@@ -7,11 +15,25 @@
           - numpy
         state: present
 
+    - name: Check if RTSP server is running
+      uri:
+        url: http://localhost:9997/v1/config/get
+        method: GET
+        status_code: 200
+        timeout: 5
+      register: rtsp_status
+      retries: 3
+      delay: 2
+      until: rtsp_status is succeeded
+      ignore_errors: yes
+
     - name: Test RTSP stream connection
       script: test_rtsp.py
       register: rtsp_test
       changed_when: false
       failed_when: false
+      environment:
+        PYTHONUNBUFFERED: 1
 
     - name: Show RTSP test result
       debug:
